⬇️ Use an older version of parcel

--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "homepage": "https://github.com/fushra/web-editor#readme",
   "devDependencies": {
-    "meml": "fushra/meml",
-    "parcel": "next"
+    "parcel": "^2.0.0-beta.1"
   },
   "dependencies": {
     "codemirror": "^5.61.0",
+    "meml": "fushra/meml",
     "pretty": "^2.0.0"
   }
 }
